--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,34 +2,36 @@
 
 <div class="container">
   <h1 class="text-center">Log In</h1>
-  <div id="form">
-    <form action="/login" method="POST">
-      <div class="form-group">
-        <input
-          type="text"
-          name="username"
-          class="form-control"
-          placeholder="Username"
-          required
-        />
-      </div>
-      <div class="form-group">
-        <input
-          type="password"
-          name="password"
-          class="form-control"
-          placeholder="Password"
-          required
-        />
-      </div>
-      <div class="form-group">
-        <input
-          type="submit"
-          class="form-control btn btn-block btn-primary"
-          value="Log In"
-        />
-      </div>
-    </form>
+  <div class="row justify-content-center">
+    <div class="col-sm-6">
+      <form action="/login" method="POST">
+        <div class="form-group">
+          <input
+            type="text"
+            name="username"
+            class="form-control"
+            placeholder="Username"
+            required
+          />
+        </div>
+        <div class="form-group">
+          <input
+            type="password"
+            name="password"
+            class="form-control"
+            placeholder="Password"
+            required
+          />
+        </div>
+        <div class="form-group">
+          <input
+            type="submit"
+            class="form-control btn btn-block btn-primary"
+            value="Log In"
+          />
+        </div>
+      </form>
+    </div>
   </div>
 </div>
 
