--- a/views/grades/edit.ejs
+++ b/views/grades/edit.ejs
@@ -2,47 +2,49 @@
 
 <div class="container">
   <h1 id="head">Edit Class Details%></h1>
-  <div id="form">
-    <form action="/grades/<%=grade._id%>?_method=PUT" method="POST">
-      <div class="form-group">
-        <input
-          type="number"
-          name="grade[std]"
-          placeholder="Class"
-          class="form-control"
-          value="<%=grade.std%>"
-          required
-        />
-      </div>
-      <div class="form-group">
-        <input
-          type="text"
-          name="grade[division]"
-          placeholder="Division"
-          class="form-control"
-          value="<%=grade.division.toUpperCase()%>"
-          required
-        />
-      </div>
-      <div class="form-group">
-        <input
-          type="text"
-          name="grade[year]"
-          placeholder="Batch"
-          class="form-control"
-          value="<%=grade.year%>"
-          required
-        />
-      </div>
-      <div class="form-group">
-        <input
-          type="submit"
-          class="btn btn-lg btn-primary btn-block"
-          value="Submit"
-        />
-      </div>
-    </form>
-    <a href="/grades">Go Back</a>
+  <div class="row justify-content-center">
+    <div class="col-sm-6">
+      <form action="/grades/<%=grade._id%>?_method=PUT" method="POST">
+        <div class="form-group">
+          <input
+            type="number"
+            name="grade[std]"
+            placeholder="Class"
+            class="form-control"
+            value="<%=grade.std%>"
+            required
+          />
+        </div>
+        <div class="form-group">
+          <input
+            type="text"
+            name="grade[division]"
+            placeholder="Division"
+            class="form-control"
+            value="<%=grade.division.toUpperCase()%>"
+            required
+          />
+        </div>
+        <div class="form-group">
+          <input
+            type="text"
+            name="grade[year]"
+            placeholder="Batch"
+            class="form-control"
+            value="<%=grade.year%>"
+            required
+          />
+        </div>
+        <div class="form-group">
+          <input
+            type="submit"
+            class="btn btn-lg btn-primary btn-block"
+            value="Submit"
+          />
+        </div>
+      </form>
+      <a href="/grades">Go Back</a>
+    </div>
   </div>
 </div>
 
